--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container footer-content">
-    Made with <i class ="fa fa-heart"></i> by TermProject_by iot<br>
+    Made with <i class ="fa fa-heart"></i> by TermProject CSD<br>
     MK, JH, KH, AR
   </div>
 </nav>
